--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <title>bootstrap测试用例</title>
-  <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+  <title>李景超的简历</title>
   <meta  charset=utf-8" />
   <meta name="viewport" content="initial-scale=1,maximum-scale=1, minimum-scale=1,user-scalable=no" />
   <link href="favicon.ico" rel="shortcut icon">
