--- a/index.html
+++ b/index.html
@@ -1,219 +1,174 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-  <title>李景超的简历</title>
-  <meta  charset=utf-8" />
-  <meta name="viewport" content="initial-scale=1,maximum-scale=1, minimum-scale=1,user-scalable=no" />
-  <link href="favicon.ico" rel="shortcut icon">
-  <link rel="stylesheet" href="./normalize.css">
-  <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-  <script type="text/javascript" src="./jquery.min.js"></script>
-  <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1" /><title>李景超简历</title>
+	<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
+	<link rel="shortcut icon" href="./images/favicon.png"/>
 </head>
-<style type="text/css">
-
-</style>
-<body>
-<div id="temp"></div>
-<ul class="JQ-content-box" style="padding:20px; background:#FFFFFF">
-    <li>第一行
-        <ul>
-            <li>这是公告标题1</li>
-            <li>这是公告标题2</li>
-            <li>这是公告标题3</li>
-            <li>这是公告标题4</li>
-        </ul>
-    </li>
-</ul>
-<script>
-    $(function(){
-        $("li").on("click",function(e){
-            console.log(e.target);
-            console.log(this);
-            $("#temp").html("clicked: " + e.target.nodeName);
-            $(e.target).css("color","#FF3300");
-        })
-    });
-</script>
-<!-- Button trigger modal -->
-<!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button> -->
-
-<!-- Modal -->
-<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-<!-- <div class="bs-example" data-example-id="embedded-scrollspy">
-    <nav id="navbar-example2" class="navbar navbar-default navbar-static">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-scrollspy">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project Name</a>
-        </div>
-        <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#fat">@fat</a></li>
-            <li class=""><a href="#mdo">@mdo</a></li>
-            <li class="dropdown">
-              <a href="#" id="navbarDrop1" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDrop1">
-                <li class=""><a href="#one">one</a></li>
-                <li class=""><a href="#two">two</a></li>
-                <li role="separator" class="divider"></li>
-                <li class=""><a href="#three">three</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div  data-offset="0" class="scrollspy-example" data-spy="scroll" data-target="#navbar-example2">
-      <h4 id="fat">@fat</h4>
-      <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
-      <h4 id="mdo">@mdo</h4>
-      <p>Veniam marfa mustache skateboard, adipisicing fugiat velit pitchfork beard. Freegan beard aliqua cupidatat mcsweeney's vero. Cupidatat four loko nisi, ea helvetica nulla carles. Tattooed cosby sweater food truck, mcsweeney's quis non freegan vinyl. Lo-fi wes anderson +1 sartorial. Carles non aesthetic exercitation quis gentrify. Brooklyn adipisicing craft beer vice keytar deserunt.</p>
-      <h4 id="one">one</h4>
-      <p>Occaecat commodo aliqua delectus. Fap craft beer deserunt skateboard ea. Lomo bicycle rights adipisicing banh mi, velit ea sunt next level locavore single-origin coffee in magna veniam. High life id vinyl, echo park consequat quis aliquip banh mi pitchfork. Vero VHS est adipisicing. Consectetur nisi DIY minim messenger bag. Cred ex in, sustainable delectus consectetur fanny pack iphone.</p>
-      <h4 id="two">two</h4>
-      <p>In incididunt echo park, officia deserunt mcsweeney's proident master cleanse thundercats sapiente veniam. Excepteur VHS elit, proident shoreditch +1 biodiesel laborum craft beer. Single-origin coffee wayfarers irure four loko, cupidatat terry richardson master cleanse. Assumenda you probably haven't heard of them art party fanny pack, tattooed nulla cardigan tempor ad. Proident wolf nesciunt sartorial keffiyeh eu banh mi sustainable. Elit wolf voluptate, lo-fi ea portland before they sold out four loko. Locavore enim nostrud mlkshk brooklyn nesciunt.</p>
-      <h4 id="three">three</h4>
-      <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
-      <p>Keytar twee blog, culpa messenger bag marfa whatever delectus food truck. Sapiente synth id assumenda. Locavore sed helvetica cliche irony, thundercats you probably haven't heard of them consequat hoodie gluten-free lo-fi fap aliquip. Labore elit placeat before they sold out, terry richardson proident brunch nesciunt quis cosby sweater pariatur keffiyeh ut helvetica artisan. Cardigan craft beer seitan readymade velit. VHS chambray laboris tempor veniam. Anim mollit minim commodo ullamco thundercats.
-      </p>
-    </div>
-</div> -->
-
-<div id="navbar-example">
-
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist" id="navbar-example">
-    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab" style="text-shadow: black 5px 3px 3px;font-size: 30px"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-file"></span> Profile</a></li>
-    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-envelope"></span> Messages</a></li>
-    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-  </ul>
-
-  <!-- Tab panes -->
-  <div class="tab-content">
-  <span class="glyphicon glyphicon-menu-up"></span>
-    <div role="tabpanel" class="tab-pane fade in active" id="home">1</div>
-    <div role="tabpanel" class="tab-pane fade" id="profile">@fat</div>
-    <div role="tabpanel" class="tab-pane " id="messages">3</div>
-    <div role="tabpanel" class="tab-pane " id="settings">4</div>
-  </div>
+<body class="loading-process">
+<div class="loading">
+	<div class="loading-circle"></div>
+	<div class="loading-avatar"><img src="images/avatar@2x.jpg" alt="" width="100" height="100"></div>
+	<div class="loading-info">正在努力加载中...</div>
+</div>
+<div class="section-header">
+	<div class="section">
+		<nav class="nav" role="navigation">
+			<ul>
+				<li class="nav-about fade fade1"><a href="#about">关于</a></li>
+				<li class="nav-works fade fade4"><a href="#works">作品</a></li>
+				<li class="fade back-home"><a href="#top">首页</a></li>
+				<li class="nav-skill fade fade2"><a href="#skill">能力</a></li>
+				<li class="nav-contact fade fade3"><a href="#contact">联系</a></li>
+			</ul>
+		</nav>
+	</div>
+	<div class="nav-bg"></div>
+</div>
+<div class="home-bg">
+	<img src="images/home-bg.jpg" alt="" width="1000" height="667">
+</div>
+<div class="section-wrap section-fristpage">
+	<div class="section">
+		<div class="section-content">
+			<p class="fade fade1">Hi，我是 李景超</p>
+			<p class="fade fade2">擅长前端，喜欢简约，打算走向全端的不归路 ~</p>
+			<p class="fade fade3">想了解更多，往下滚动哦 ^_^</p>
+		</div>
+		<a href="#" class="scroll-tip fade fade4">向下滚动</a>
+	</div>
+</div>
+<div id="about" class="section-wrap section-about">
+	<div class="section">
+		<div class="about-content clearfix section-content">
+			<div class="left">
+				<h1>关于本人</h1>
+				<p class="fade fade1">2008 年接触网站建设</p>
+				<p class="fade fade2">2012 年专注前端学习</p>
+				<p class="fade fade3">断续写过两年多独立博客（旧博 <a href="http://www.qianxingzhem.com" target="_blank">潜行者m</a>)</p>
+				<p class="fade fade4"><a href="http://www.haohaoxuexitiantianxiangshang.com" target="_blank">好好学习天天向上</a> 开发者</p>
+				<p class="fade fade5"><a href="http://deepdevelop.com" target="_blank">Deepdevelop</a> 兼职前端工程师</p>
+				<p class="fade fade6">目前在申请前端实习，为 10 月份校招做准备。</p>
+			</div>
+			<div class="right">
+				<img class="my-photo fade fade4" src="images/me.jpg" alt="" width="335" height="540">
+			</div>
+		</div>
+	</div>
+</div>
+<div id="works" class="section-wrap section-works">
+	<div class="section">
+		<div class="works-content section-content">
+			<h1>近期作品</h1>
+			<div class="works-list clearfix">
+				<div class="works-item first fade fade1">
+					<a href="http://www.uucsr.org/" target="_blank">
+						<img src="images/works/uucsr.jpg" alt="" width="300" height="180">
+						<div class="work-info">
+							<h2>UUSCR</h2>
+							<p><strong>开发时间</strong>：2013年8月<br>
+							<strong>工作详情</strong>：由本人负责前端页面开发，在 5 天时间内完成 30 个页面（11 个独立页面结构）的开发，以及相关交互 JS 等。</p>
+						</div>
+					</a>
+				</div>
+				<div class="works-item fade fade2">
+					<a href="http://hamburger-kammerspiele.de/" target="_blank">
+						<img src="images/works/hk.jpg" alt="" width="300" height="180">
+						<div class="work-info">
+							<h2>Hamburger Kammerspiele</h2>
+							<p><strong>开发时间</strong>：2013年11月<br>
+							<strong>工作详情</strong>：负责前端页面和兼容性，响应式，增加 JS 交互和功能等。</p>
+						</div>
+					</a>
+				</div>
+				<div class="works-item fade fade3">
+					<a href="http://www.haohaoxuexitiantianxiangshang.com/" target="_blank">
+						<img src="images/works/hhxx.jpg" alt="" width="300" height="180">
+						<div class="work-info">
+							<h2>好好学习 天天向上</h2>
+							<p><strong>开发时间</strong>：2013年6月 - 至今<br>
+							<strong>工作详情</strong>：基于 WordPress 做前后端整站的开发和功能整合。</p>
+						</div>
+					</a>
+				</div>
+				<div class="works-item first fade fade4">
+					<a href="http://97866.com/" target="_blank">
+						<img src="images/works/game.jpg" alt="" width="300" height="180">
+						<div class="work-info">
+							<h2>游戏小站</h2>
+							<p><strong>开发时间</strong>：2013年12月<br>
+							<strong>工作详情</strong>：基于 PSD 做前端页面开发，于后端沟通交流。</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<a class="more-link" href="http://yujiangshui.com/product/">查看更多</a>
+		</div>
+	</div>
+</div>
+<div id="skill" class="section-wrap section-skill">
+	<div class="section">
+		<div class="skill-content section-content">
+			<h1>技能水平</h1>
+			<ul>
+				<li class="fade fade1">熟练掌握语义化的 HTML 和具有兼容性的 CSS 模式，熟练手写符合 W3C 标准的结构和代码。</li>
+				<li class="fade fade3">对 可用性、可访问性、前端性能优化、最优实践 等有一定的了解和实践。</li>
+				<li class="fade fade2">对 HTML5 和 CSS3 有一定了解。</li>
+				<li class="fade fade4">熟练掌握 ST2 、Emmet、Sass 等等前端开发和团队协作工具。</li>
+				<li class="fade fade4">熟练掌握 jQuery，实现日常需要的交互效果。</li>
+				<li class="fade fade3">喜欢并使用 WordPress ，写过两年多技术博客，有一定 PHP 后端相关知识。</li>
+				<li class="fade fade2">了解 Ajax 工作原理和实现方法。</li>
+				<li class="fade fade1">对用户体验和交互设计有一定的了解和追求。</li>
+				<li class="fade fade1">做过很多网站，了解整套网站建设的流程和相关内容（SEO、维护等）。</li>
+				<li class="fade fade4">服务器使用自己搭建环境的 VPS，对 Linux 有一定了解。</li>
+				<li class="fade fade2">对喜欢的事物抱有极大的兴趣和自学能力，喜欢接触新事物。</li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div id="contact" class="section-wrap section-contact">
+	<div class="section">
+		<div class="contact-content clearfix section-content">
+			<h1>联系本人</h1>
+			<div class="left">
+				<div class="contact-ways fade fade1">
+					<h2>社交网络</h2>
+					<ul>
+						<li>邮箱：<a target="_blank" href="mailto:yujiangshui+work@gmail.com">yujiangshui+work@gmail.com</a></li>
+						<li>Q Q ：<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2422018627&amp;site=qq&amp;menu=yes">2422018627</a></li>
+						<li>知乎：<a target="_blank" href="http://www.zhihu.com/people/jiangshui">@于江水</a></li>
+						<li>微博：<a target="_blank" href="http://weibo.com/yujiangshui">@yujiangshui</a></li>
+						<li>Twitter：<a target="_blank" href="https://twitter.com/yujiangshui">@yujiangshui</a></li>
+						<li>Github：<a target="_blank" href="https://github.com/yujiangshui">@yujiangshui</a></li>
+					</ul>
+				</div>
+				<div class="contact-info fade fade2">
+					<h2>本站声明</h2>
+					<p>本站设计、交互、编码均由 Jiangshui 一人独立完成。感谢 jQuery 提供了很多方便。本站源代码已经公开在 github 上面，欢迎 fork 学习。</p>
+				</div>
+			</div>
+			<div class="right fade fade3">
+				<h2>项目外包</h2>
+				<p>如果你有前端相关的需求，可以联系我做外包，目前我主要做：</p>
+				<ul>
+					<li>根据设计稿做出后端开发人员需要的前端页面，并与后端人员做交流。</li>
+					<li>根据需求，对网站前端进行修改和优化，或者转响应式处理。</li>
+					<li>做 WordPress 主题或者功能，功能等主要由 <a href="http://wpjam.com/" target="_blank">WPJAM</a> 来做，我来前端有关。</li>
+					<li>对于网站建设项目，我也有一些同行朋友可以推荐，也欢迎咨询！</li>
+				</ul>
+				<p><strong>合作流程</strong>：按照合作谈定的价格，预付 50% 的项目款，开始工作。完成验收后，支付尾款。</p>
+				<p><strong>价格参考</strong>：视具体项目难度和工作量等，一般来说，工时价格为 150 左右。</p>
+			</div>
+		</div>
+	</div>
 </div>
 
-<!-- HTML to write -->
-<div id="csswer" data-toggle="tooltip" data-trigger="click" title="Example tooltip">请悬停在我的上面</div>
-<button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-content="Vivamus
-sagittis lacus vel augue laoreet rutrum faucibus.">
-  Popover on 底部
-</button>
+<div class="overlay"></div>
+<div class="state-indicator"></div>
 
-<div class="alert alert-warning alert-dismissible fade in" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <strong>Holy guacamole!</strong> Best check yo self, you're not looking too good.
-</div>
-
-
-<a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-  Link with href
-</a>
-<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-  Button with data-target
-</button>
-<div class="collapse" id="collapseExample">
-  <div class="well">
-    111
-  </div>
-</div>
-
-<!-- Carousel  -->
+<script type="text/javascript" src="./js/jquery-1.9.1.min.js"></script>
+<script src="js/global.js"></script>
 
 </body>
 </html>
-<style type="text/css">
-
-</style>
-<script type="text/javascript">
-
-$(function () { 
-	$("[data-toggle='tooltip']").tooltip();
-	$('[data-toggle="popover"]').popover()
-});
-$('#csswer').on('shown.bs.tooltip', function () {
-  
-})
-
-	/**
-	* @example $.cookie('the_cookie', 'the_value');
-	* @desc Set the value of a cookie.
-	* @example $.cookie('the_cookie', 'the_value', { expires: 7, path: '/', domain: 'jquery.com', secure: true });
-	* @desc Create a cookie with all available options.
-	* @example $.cookie('the_cookie', 'the_value');
-	* @desc Create a session cookie.
-	* @example $.cookie('the_cookie', null);
-	*/
-	jQuery.cookie = function(name, value, options) {
-	    if (typeof value != 'undefined') { // name and value given, set cookie
-	        options = options || {};
-	        if (value === null) {
-	            value = '';
-	            options.expires = -1;
-	        }
-	        var expires = '';
-	        if (options.expires && (typeof options.expires == 'number' || options.expires.toUTCString)) {
-	            var date;
-	            if (typeof options.expires == 'number') {
-	                date = new Date();
-	                date.setTime(date.getTime() + (options.expires * 24 * 60 * 60 * 1000));
-	            } else {
-	                date = options.expires;
-	            }
-	            expires = '; expires=' + date.toUTCString(); // use expires attribute, max-age is not supported by IE
-	        }
-	        // CAUTION: Needed to parenthesize options.path and options.domain
-	        // in the following expressions, otherwise they evaluate to undefined
-	        // in the packed version for some reason...
-	        var path = options.path ? '; path=' + (options.path) : '';
-	        var domain = options.domain ? '; domain=' + (options.domain) : '';
-	        var secure = options.secure ? '; secure' : '';
-	        document.cookie = [name, '=', encodeURIComponent(value), expires, path, domain, secure].join('');
-	    } else { // only name given, get cookie
-	        var cookieValue = null;
-	        if (document.cookie && document.cookie != '') {
-	            var cookies = document.cookie.split(';');
-	            for (var i = 0; i < cookies.length; i++) {
-	                var cookie = jQuery.trim(cookies[i]);
-	                // Does this cookie string begin with the name we want?
-	                if (cookie.substring(0, name.length + 1) == (name + '=')) {
-	                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-	                    break;
-	                }
-	            }
-	        }
-	        return cookieValue;
-	    }
-	};
-</script>
