--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1" /><title>李景超简历</title>
 	<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
-	<link rel="shortcut icon" href="./images/favicon.png"/>
+	<link rel="shortcut icon" href="./images/favicon.ico"/>
 </head>
 <body class="loading-process">
 <div class="loading">
