--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="loading-process">
 <div class="loading">
 	<div class="loading-circle"></div>
-	<div class="loading-avatar"><img src="images/avatar@2x.jpg" alt="" width="100" height="100"></div>
+	<div class="loading-avatar"><img src="images/head.png" width="100" height="100"></div>
 	<div class="loading-info">正在努力加载中...</div>
 </div>
 <div class="section-header">
@@ -43,16 +43,16 @@
 	<div class="section">
 		<div class="about-content clearfix section-content">
 			<div class="left">
-				<h1>关于本人</h1>
-				<p class="fade fade1">2008 年接触网站建设</p>
-				<p class="fade fade2">2012 年专注前端学习</p>
-				<p class="fade fade3">断续写过两年多独立博客（旧博 <a href="http://www.qianxingzhem.com" target="_blank">潜行者m</a>)</p>
+				<h1>本人介绍</h1>
+				<p class="fade fade1">2015 年接触网站建设</p>
+				<p class="fade fade2">2016 年专注前端学习</p>
+				<p class="fade fade3">写过两年多独立博客（旧博 <a href="https://hpushine.github.io/resume" target="_blank">个人博客</a>)</p>
 				<p class="fade fade4"><a href="http://www.haohaoxuexitiantianxiangshang.com" target="_blank">好好学习天天向上</a> 开发者</p>
 				<p class="fade fade5"><a href="http://deepdevelop.com" target="_blank">Deepdevelop</a> 兼职前端工程师</p>
 				<p class="fade fade6">目前在申请前端实习，为 10 月份校招做准备。</p>
 			</div>
 			<div class="right">
-				<img class="my-photo fade fade4" src="images/me.jpg" alt="" width="335" height="540">
+				<img class="my-photo fade fade4" src="images/me.jpg" alt="图片" width="480" height="640">
 			</div>
 		</div>
 	</div>
@@ -67,7 +67,7 @@
 						<img src="images/works/uucsr.jpg" alt="" width="300" height="180">
 						<div class="work-info">
 							<h2>UUSCR</h2>
-							<p><strong>开发时间</strong>：2013年8月<br>
+							<p><strong>开发时间</strong>：2016年8月<br>
 							<strong>工作详情</strong>：由本人负责前端页面开发，在 5 天时间内完成 30 个页面（11 个独立页面结构）的开发，以及相关交互 JS 等。</p>
 						</div>
 					</a>
@@ -103,7 +103,7 @@
 					</a>
 				</div>
 			</div>
-			<a class="more-link" href="http://yujiangshui.com/product/">查看更多</a>
+			<a class="more-link" href="http://lijingchao.com/product/">查看更多</a>
 		</div>
 	</div>
 </div>
@@ -135,17 +135,17 @@
 				<div class="contact-ways fade fade1">
 					<h2>社交网络</h2>
 					<ul>
-						<li>邮箱：<a target="_blank" href="mailto:yujiangshui+work@gmail.com">yujiangshui+work@gmail.com</a></li>
-						<li>Q Q ：<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2422018627&amp;site=qq&amp;menu=yes">2422018627</a></li>
-						<li>知乎：<a target="_blank" href="http://www.zhihu.com/people/jiangshui">@于江水</a></li>
-						<li>微博：<a target="_blank" href="http://weibo.com/yujiangshui">@yujiangshui</a></li>
-						<li>Twitter：<a target="_blank" href="https://twitter.com/yujiangshui">@yujiangshui</a></li>
-						<li>Github：<a target="_blank" href="https://github.com/yujiangshui">@yujiangshui</a></li>
+						<li>钉钉邮箱：<a target="_blank" href="#">lijingchao@dataguiding.com</a></li>
+						<li>Q Q ：<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2293848895&amp;site=qq&amp;menu=yes">2293848895</a></li>
+						<li>知乎：<a target="_blank" href="http://www.zhihu.com/people/chao-39-43">@lijingchao</a></li>
+						<li>微博：<a target="_blank" href="http://weibo.com/6347758239">@lijingchao</a></li>
+						<!-- <li>Twitter：<a target="_blank" href="https://twitter.com/lijingchao">@lijingchao</a></li> -->
+						<li>Github：<a target="_blank" href="https://github.com/hpushine">@lijingchao</a></li>
 					</ul>
 				</div>
 				<div class="contact-info fade fade2">
 					<h2>本站声明</h2>
-					<p>本站设计、交互、编码均由 Jiangshui 一人独立完成。感谢 jQuery 提供了很多方便。本站源代码已经公开在 github 上面，欢迎 fork 学习。</p>
+					<p>本站设计、交互、编码借鉴 Jiangshui 完成。感谢 jQuery 提供了很多方便。本站源代码已经公开在 github 上面，欢迎 fork 学习。</p>
 				</div>
 			</div>
 			<div class="right fade fade3">
