--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<h1>本人介绍</h1>
 				<p class="fade fade1">2015 年接触网站建设</p>
 				<p class="fade fade2">2016 年专注前端学习</p>
-				<p class="fade fade3">写过两年多独立博客（旧博 <a href="https://hpushine.github.io/resume" target="_blank">个人博客</a>)</p>
+				<p class="fade fade3">写过两年多独立博客（旧博 <a href="https://hpushine.github.io" target="_blank">个人博客</a>)</p>
 				<p class="fade fade4"><a href="http://www.haohaoxuexitiantianxiangshang.com" target="_blank">好好学习天天向上</a> 开发者</p>
 				<p class="fade fade5"><a href="http://deepdevelop.com" target="_blank">Deepdevelop</a> 兼职前端工程师</p>
 				<p class="fade fade6">目前在申请前端实习，为 10 月份校招做准备。</p>
