--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<p class="fade fade6">目前在申请前端实习，为 10 月份校招做准备。</p>
 			</div>
 			<div class="right">
-				<img class="my-photo fade fade4" src="images/me.jpg" alt="图片" width="480" height="640">
+				<img class="my-photo fade fade4" src="images/me.jpg" alt="图片" width="335" height="540">
 			</div>
 		</div>
 	</div>
@@ -103,7 +103,7 @@
 					</a>
 				</div>
 			</div>
-			<a class="more-link" href="http://lijingchao.com/product/">查看更多</a>
+			<a class="more-link" href="https://hpushine.github.io">查看更多</a>
 		</div>
 	</div>
 </div>
