--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					</a>
 				</div>
 			</div>
-			<a class="more-link" href="https://hpushine.github.io">查看更多</a>
+			<a class="more-link" target="_blank" href="https://hpushine.github.io">查看更多</a>
 		</div>
 	</div>
 </div>
