--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<h1>本人介绍</h1>
 				<p class="fade fade1">2015 年接触网站建设</p>
 				<p class="fade fade2">2016 年专注前端学习</p>
-				<p class="fade fade3">写过两年多独立博客（旧博 <a href="https://hpushine.github.io" target="_blank">个人博客</a>)</p>
+				<p class="fade fade3">写过两年多独立博客（ <a href="https://hpushine.github.io" target="_blank">个人博客</a>)</p>
 				<p class="fade fade4"><a href="http://www.haohaoxuexitiantianxiangshang.com" target="_blank">好好学习天天向上</a> 开发者</p>
 				<p class="fade fade5"><a href="http://deepdevelop.com" target="_blank">Deepdevelop</a> 兼职前端工程师</p>
 				<p class="fade fade6">目前在申请前端实习，为 10 月份校招做准备。</p>
@@ -63,42 +63,42 @@
 			<h1>近期作品</h1>
 			<div class="works-list clearfix">
 				<div class="works-item first fade fade1">
-					<a href="http://www.uucsr.org/" target="_blank">
-						<img src="images/works/uucsr.jpg" alt="" width="300" height="180">
+					<a href="#" target="_blank">
+						<img src="images/works/hk.jpg" alt="" width="300" height="180">
 						<div class="work-info">
-							<h2>UUSCR</h2>
+							<h2>Rank</h2>
 							<p><strong>开发时间</strong>：2016年8月<br>
-							<strong>工作详情</strong>：由本人负责前端页面开发，在 5 天时间内完成 30 个页面（11 个独立页面结构）的开发，以及相关交互 JS 等。</p>
+							<strong>工作详情</strong>：由本人负责前端页面开发，完成 27 个页面（10 个独立页面结构）的开发，以及相关交互 JS 等。</p>
 						</div>
 					</a>
 				</div>
 				<div class="works-item fade fade2">
-					<a href="http://hamburger-kammerspiele.de/" target="_blank">
-						<img src="images/works/hk.jpg" alt="" width="300" height="180">
+					<a href="https://dentisit.dataguiding.com" target="_blank">
+						<img src="images/works/uu.jpg" alt="" width="300" height="180">
 						<div class="work-info">
-							<h2>Hamburger Kammerspiele</h2>
-							<p><strong>开发时间</strong>：2013年11月<br>
-							<strong>工作详情</strong>：负责前端页面和兼容性，响应式，增加 JS 交互和功能等。</p>
+							<h2>dentist</h2>
+							<p><strong>开发时间</strong>：2016年12月<br>
+							<strong>工作详情</strong>：负责超级管理员和品牌管理员角色页面功能开发。</p>
 						</div>
 					</a>
 				</div>
 				<div class="works-item fade fade3">
-					<a href="http://www.haohaoxuexitiantianxiangshang.com/" target="_blank">
-						<img src="images/works/hhxx.jpg" alt="" width="300" height="180">
+					<a href="shop.dataguiding.com" target="_blank">
+						<img src="images/works/game.jpg" alt="" width="300" height="180">
 						<div class="work-info">
-							<h2>好好学习 天天向上</h2>
-							<p><strong>开发时间</strong>：2013年6月 - 至今<br>
-							<strong>工作详情</strong>：基于 WordPress 做前后端整站的开发和功能整合。</p>
+							<h2>微店shop</h2>
+							<p><strong>开发时间</strong>：2017年3月<br>
+							<strong>工作详情</strong>：基于 PSD 做前端页面开发，于后端沟通交流。</p>
 						</div>
 					</a>
 				</div>
 				<div class="works-item first fade fade4">
-					<a href="http://97866.com/" target="_blank">
-						<img src="images/works/game.jpg" alt="" width="300" height="180">
+					<a href="http://www.haohaoxuexitiantianxiangshang.com/" target="_blank">
+						<img src="images/works/hhxx.jpg" alt="" width="300" height="180">
 						<div class="work-info">
-							<h2>游戏小站</h2>
-							<p><strong>开发时间</strong>：2013年12月<br>
-							<strong>工作详情</strong>：基于 PSD 做前端页面开发，于后端沟通交流。</p>
+							<h2>好好学习 天天向上</h2>
+							<p><strong>开发时间</strong>：2017年6月 - 至今<br>
+							<strong>工作详情</strong>：基于 WordPress 做前后端整站的开发和功能整合。</p>
 						</div>
 					</a>
 				</div>
@@ -114,15 +114,15 @@
 			<ul>
 				<li class="fade fade1">熟练掌握语义化的 HTML 和具有兼容性的 CSS 模式，熟练手写符合 W3C 标准的结构和代码。</li>
 				<li class="fade fade3">对 可用性、可访问性、前端性能优化、最优实践 等有一定的了解和实践。</li>
-				<li class="fade fade2">对 HTML5 和 CSS3 有一定了解。</li>
-				<li class="fade fade4">熟练掌握 ST2 、Emmet、Sass 等等前端开发和团队协作工具。</li>
-				<li class="fade fade4">熟练掌握 jQuery，实现日常需要的交互效果。</li>
+				<li class="fade fade2">熟悉掌握 HTML5 和 CSS3 并做过一些网页。</li>
+				<li class="fade fade4">熟悉前端开发工程化工具和团队协作工具。</li>
+				<li class="fade fade4">熟练掌握 jQuery，bootstrap等实现日常需要的交互效果，熟悉anularjs和vue框架。</li>
 				<li class="fade fade3">喜欢并使用 WordPress ，写过两年多技术博客，有一定 PHP 后端相关知识。</li>
-				<li class="fade fade2">了解 Ajax 工作原理和实现方法。</li>
+				<li class="fade fade2">熟悉 Ajax 工作原理和实现方法。</li>
 				<li class="fade fade1">对用户体验和交互设计有一定的了解和追求。</li>
 				<li class="fade fade1">做过很多网站，了解整套网站建设的流程和相关内容（SEO、维护等）。</li>
 				<li class="fade fade4">服务器使用自己搭建环境的 VPS，对 Linux 有一定了解。</li>
-				<li class="fade fade2">对喜欢的事物抱有极大的兴趣和自学能力，喜欢接触新事物。</li>
+				<li class="fade fade2">对web安全方面有一定的了解和实践，做过简单的web攻击测试。</li>
 			</ul>
 		</div>
 	</div>
@@ -158,7 +158,6 @@
 					<li>对于网站建设项目，我也有一些同行朋友可以推荐，也欢迎咨询！</li>
 				</ul>
 				<p><strong>合作流程</strong>：按照合作谈定的价格，预付 50% 的项目款，开始工作。完成验收后，支付尾款。</p>
-				<p><strong>价格参考</strong>：视具体项目难度和工作量等，一般来说，工时价格为 150 左右。</p>
 			</div>
 		</div>
 	</div>
