--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div id="works" class="section-wrap section-works">
 	<div class="section">
 		<div class="works-content section-content">
-			<h1>近期作品</h1>
+			<h1>项目作品</h1>
 			<div class="works-list clearfix">
 				<div class="works-item first fade fade1">
 					<a href="#" target="_blank">
@@ -145,7 +145,7 @@
 				</div>
 				<div class="contact-info fade fade2">
 					<h2>本站声明</h2>
-					<p>本站设计、交互、编码借鉴 Jiangshui 完成。感谢 jQuery 提供了很多方便。本站源代码已经公开在 github 上面，欢迎 fork 学习。</p>
+					<p>本站设计、交互、编码参考 Jiangshui 个人项目完成。只是做了简单的修改，项目已开源github上，欢迎fork。</p>
 				</div>
 			</div>
 			<div class="right fade fade3">
