--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1" /><title>李景超简历</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1" /><title>李景超</title>
 	<link rel="stylesheet" href="./style.css" type="text/css" media="all" />
 	<link rel="shortcut icon" href="./images/favicon.ico"/>
 </head>
@@ -17,7 +17,7 @@
 		<nav class="nav" role="navigation">
 			<ul>
 				<li class="nav-about fade fade1"><a href="#about">关于</a></li>
-				<li class="nav-works fade fade4"><a href="#works">作品</a></li>
+				<li class="nav-works fade fade4"><a href="#works">项目</a></li>
 				<li class="fade back-home"><a href="#top">首页</a></li>
 				<li class="nav-skill fade fade2"><a href="#skill">能力</a></li>
 				<li class="nav-contact fade fade3"><a href="#contact">联系</a></li>
@@ -33,8 +33,8 @@
 	<div class="section">
 		<div class="section-content">
 			<p class="fade fade1">Hi，我是 李景超</p>
-			<p class="fade fade2">擅长前端，喜欢简约，打算走向全端的不归路 ~</p>
-			<p class="fade fade3">想了解更多，往下滚动哦 ^_^</p>
+			<p class="fade fade2">在读研究生，擅长前端，正在学习nodejs，打算走向全端的不归路 ~</p>
+			<p class="fade fade3">更多信息往下滚动哦 ^_^</p>
 		</div>
 		<a href="#" class="scroll-tip fade fade4">向下滚动</a>
 	</div>
@@ -46,7 +46,7 @@
 				<h1>本人介绍</h1>
 				<p class="fade fade1">2015 年接触网站建设</p>
 				<p class="fade fade2">2016 年专注前端学习</p>
-				<p class="fade fade3">写过两年多独立博客（ <a href="https://hpushine.github.io" target="_blank">个人博客</a>)</p>
+				<p class="fade fade3">写过自己的博客（ <a href="https://hpushine.github.io" target="_blank">个人博客</a>)</p>
 				<p class="fade fade4"><a href="http://www.haohaoxuexitiantianxiangshang.com" target="_blank">好好学习天天向上</a> 开发者</p>
 				<p class="fade fade5"><a href="http://deepdevelop.com" target="_blank">Deepdevelop</a> 兼职前端工程师</p>
 				<p class="fade fade6">目前在申请前端实习，为 10 月份校招做准备。</p>
@@ -148,7 +148,7 @@
 					<p>本站设计、交互、编码参考 Jiangshui 个人项目完成。只是做了简单的修改，项目已开源github上，欢迎fork。</p>
 				</div>
 			</div>
-			<div class="right fade fade3">
+			<!-- <div class="right fade fade3">
 				<h2>项目外包</h2>
 				<p>如果你有前端相关的需求，可以联系我做外包，目前我主要做：</p>
 				<ul>
@@ -158,7 +158,7 @@
 					<li>对于网站建设项目，我也有一些同行朋友可以推荐，也欢迎咨询！</li>
 				</ul>
 				<p><strong>合作流程</strong>：按照合作谈定的价格，预付 50% 的项目款，开始工作。完成验收后，支付尾款。</p>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
