--- a/app/article.html
+++ b/app/article.html
@@ -37,9 +37,9 @@
 			    <span class="name">李景超的博客</span>  
 			  </div>
 			  <ul class="nav-link">
-			    <li><a href="/">首页</a></li>
-			    <li><a href="/app">JS</a></li>
-			    <li><a href="/app/article" class="active-nav">随笔</a></li>
+			    <li><a href="/blog">首页</a></li>
+			    <li><a href="/blog/app">JS</a></li>
+			    <li><a href="/blog/app/article" class="active-nav">随笔</a></li>
 			  </ul>
 			  <span class="welcome">欢迎进入我的博客！&nbsp&nbsp<span class="time"></span></span>
 			</div>
