--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
         <button style="" type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-content="这是我的个人博客，主要关于web前端知识的学习和总结！">详细介绍</button>    
       </div>
       <ul class="nav-link">
-        <li><a href="/" class="active-nav">首页</a></li>
-        <li><a href="/app">JS</a></li>
-        <li><a href="/app/article">随笔</a></li>
+        <li><a href="/blog" class="active-nav">首页</a></li>
+        <li><a href="/blog/app">JS</a></li>
+        <li><a href="/blog/app/article">随笔</a></li>
       </ul>
       <span class="welcome">欢迎进入我的博客！&nbsp&nbsp<span class="time"></span></span>
     </div>
