--- a/app/index.html
+++ b/app/index.html
@@ -105,9 +105,9 @@
     <span class="name">李景超的博客</span>  
   </div>
   <ul class="nav-link">
-    <li><a href="/blog">首页</a></li>
-    <li><a href="/blog/app" class="active-nav">JS</a></li>
-    <li><a href="/blog/app/article">随笔</a></li>
+    <li><a href="/blog">blog</a></li>
+    <li><a href="/blog1/app" class="active-nav">JS</a></li>
+    <li><a href="/blog1/app/article">随笔</a></li>
   </ul>
   <span class="welcome">欢迎进入我的博客！&nbsp&nbsp<span class="time"></span></span>
 </div>
