--- a/app/article.html
+++ b/app/article.html
@@ -37,7 +37,7 @@
 			    <span class="name">李景超的博客</span>  
 			  </div>
 			  <ul class="nav-link">
-			    <li><a href="/blog">blog</a></li>
+			    <li><a href="/blog1">首页</a></li>
 			    <li><a href="/blog1/app">JS</a></li>
 			    <li><a href="/blog1/app/article" class="active-nav">随笔</a></li>
 			  </ul>
