--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
     <span class="name">李景超的博客</span>  
   </div>
   <ul class="nav-link">
-    <li><a href="/blog">blog</a></li>
+    <li><a href="/blog1">首页</a></li>
     <li><a href="/blog1/app" class="active-nav">JS</a></li>
     <li><a href="/blog1/app/article">随笔</a></li>
   </ul>
